# template_python

./: .env.dist  .flake8  .gitignore  Makefile  README.md  pyproject.toml
scripts/tests/: coverage.sh
src/: logger.py
tests/units/: test_logger.py
